force-app/main/default/objects/ContractLines_to_QuoteLines_field_mappin__mdt/ContractLines_to_QuoteLines_field_mappin__mdt.object-meta.xml
<CustomObject>
    <label>ContractLines to QuoteLines field mappin</label>
    <pluralLabel>ContractLines to QuoteLines field mappin</pluralLabel>
</CustomObject>