force-app/main/default/objects/ContractLines_to_QuoteLines_field_mappin__mdt/fields/Contractline_field__c.field-meta.xml
<CustomField>
    <fullName>Contractline_field__c</fullName>
    <label>Contractline field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>