force-app/main/default/objects/ContractLines_to_QuoteLines_field_mappin__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type of ContractLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>