force-app/main/default/objects/ContractLines_to_QuoteLines_field_mappin__mdt/fields/QuoteLine_field__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine_field__c</fullName>
    <label>QuoteLine field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>